--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- SEO -->
-    <title>Héctor Flores | Full Stack Developer — Lima, Perú</title>
+    <title>Hector Flores | Portafolio</title>
     <meta name="description" content="Portafolio de Héctor David Flores Sánchez, desarrollador Full Stack en formación. Ingeniería de Sistemas UNI. Node.js, JavaScript, Python, C++.">
     <meta name="author" content="Héctor David Flores Sánchez">
     <meta name="robots" content="index, follow">
 
     <!-- Open Graph (para LinkedIn / redes) -->
-    <meta property="og:title" content="Héctor Flores | Full Stack Developer">
-    <meta property="og:description" content="Construyo soluciones, no solo código. Ingeniería de Sistemas — UNI, Lima Perú.">
+    <meta property="og:title" content="Héctor Flores | Portafolio">
+    <meta property="og:description" content="La imaginación es la base del cambio.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://hector-0-0.github.io">
 
@@ -47,11 +47,11 @@
         <div class="container">
             <p class="greeting">Hola, soy</p>
             <h1 class="name">Héctor<span class="dot">.</span></h1>
-            <p class="subtitle">Full Stack Developer en formación | Ingeniería de Sistemas — UNI</p>
-            <p class="hero-phrase">Construyo soluciones, no solo código.</p>
+            <p class="subtitle">Full Stack & Odoo Developer | Ingeniero de Sistemas — UNI</p>
+            <p class="hero-phrase">La imaginación es la base del cambio.</p>
             <div class="cta-group">
                 <a href="#projects" class="cta-button">Ver mi trabajo ↓</a>
-                <a href="assets/cv/CV_Hector_Flores.pdf" class="cta-button cta-button--secondary" download>⭳ Descargar CV</a>
+                
             </div>
         </div>
     </header>
@@ -63,8 +63,7 @@
             <div class="about-content">
                 <div class="image-column">
                     <div class="profile-frame">
-                        <!-- REEMPLAZAR CON FOTO REAL: src="assets/img/hector.webp" -->
-                        <img src="assets/img/placeholder.jpg" alt="Foto de Héctor Flores" class="profile-img">
+                        <img src="foto.jpg" alt="Foto de Héctor Flores" class="profile-img">
                         <div class="frame-corner corner-1"></div>
                         <div class="frame-corner corner-2"></div>
                     </div>
