--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <!-- Devicons -->
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
-
+    <link rel="icon" type="image/x-icon" href="favicon.jpg">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
