--- a/index.html
+++ b/index.html
@@ -283,10 +283,10 @@
                     <i class="devicon-github-original"></i> GitHub
                 </a>
                 <!-- REEMPLAZAR: Actualiza con tu URL real de LinkedIn -->
-                <a class="contact-link" href="https://linkedin.com/in/TU-USUARIO" target="_blank" rel="noopener">
+                <a class="contact-link" href="https://www.linkedin.com/in/h%C3%A9ctor-david-flores-s%C3%A1nchez-76b636354/" target="_blank" rel="noopener">
                     <i class="devicon-linkedin-plain"></i> LinkedIn
                 </a>
-                <a class="contact-link" href="mailto:floressanchezhectordavid@gmail.com">
+                <a class="contact-link" href="https://mail.google.com/mail/?view=cm&fs=1&to=floressanchezhectordavid@gmail.com">
                     ✉ Email
                 </a>
             </div>
@@ -297,11 +297,9 @@
     </section>
 
     <footer class="site-footer">
-        <span>Héctor Flores © 2025</span>
         <span class="footer-sep">—</span>
         <span>Hecho con código y café</span>
         <span class="footer-sep">—</span>
-        <a href="https://github.com/Hector-0-0" target="_blank" rel="noopener">Hector-0-0</a>
     </footer>
 
     <script src="script.js"></script>
