--- a/index.html
+++ b/index.html
@@ -89,13 +89,12 @@
                 </div>
                 <div class="text-column">
                     <p>
-                        Estoy en <span class="text-highlight">3er semestre de Ingeniería de Sistemas</span> en la UNI,
-                        donde también soy <span class="text-highlight">Décimo Superior de la facultad</span> y becario
-                        PRONABEC. Para mí, programar no es solo escribir código: es entender por qué los sistemas
-                        funcionan como funcionan.
+                        Curso el <span class="text-highlight">3er semestre de Ingeniería de Sistemas</span> en la UNI,
+                        donde mantengo el <span class="text-highlight">Décimo Superior de la facultad.</span>
+                        Para mí, programar no es solo escribir código, es entender por qué los sistemas funcionan como funcionan.
                     </p>
                     <p>
-                        Mi enfoque hoy es <span class="text-highlight">Full Stack con Node.js y JavaScript</span>, con
+                        Hoy me enfoco en desarrollo <span class="text-highlight">Full Stack con Node.js y JavaScript</span>, con
                         una base sólida en backend, SQL y herramientas como Docker y Linux. A futuro me atrae
                         el <span class="text-highlight">análisis de datos</span> y el ecosistema de
                         <span class="text-highlight">Odoo</span>.
@@ -108,7 +107,7 @@
                             <span class="stat-label">Especialidad:</span> Full Stack & Backend
                         </div>
                         <div class="stat-item">
-                            <span class="stat-label">Estado:</span> <span class="blink">● Disponible</span>
+                            <span class="stat-label">Estado:</span> <span>Disponible</span>
                         </div>
                     </div>
                 </div>
@@ -123,8 +122,6 @@
             <div class="skills-intro">
                 <p>
                     No elijo tecnologías por moda, sino por eficiencia.
-                    Mi enfoque es <strong>Full Stack</strong>: construir
-                    sistemas confiables y mantenerlos sanos en producción.
                 </p>
             </div>
             <div class="skills-grid">
