--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <li><a href="#contact">Contacto</a></li>
         </ul>
 
-        <a href="assets/cv/CV_Hector_Flores.pdf" class="nav-cv" download>CV ↓</a>
+        <a href="CV_Hector_Flores.pdf" class="nav-cv" download>CV ↓</a>
     </nav>
 
     <canvas id="canvas-background"></canvas>
@@ -287,7 +287,7 @@
                     ✉ Email
                 </a>
             </div>
-            <a href="assets/cv/CV_Hector_Flores.pdf" class="cta-button cta-button--secondary" download>
+            <a href="CV_Hector_Flores.pdf" class="cta-button cta-button--secondary" download>
                 ⭳ Descargar CV
             </a>
         </div>
